--- a/www/index.html
+++ b/www/index.html
@@ -201,7 +201,8 @@ minimum-scale=1, width=device-width, height=device-height"/>
     			  	</div>
 				     
 				     <div id="slider2"></div>
-				     <button id="eraser2" onclick="myEraser2()">
+<!-- 				     <button id="eraser2" onclick="myEraser2()"> -->
+					<button id="eraser2" onclick="myEraser2()">
 				     	<img src="img/eraser.png" width="25%" height="25%" id="dagger" />
 				     </button>
 				     <button id="myMarker2" onclick="myMarker2()">
@@ -211,12 +212,7 @@ minimum-scale=1, width=device-width, height=device-height"/>
 				     <button type="submit" value="Clear" onclick="clearCanvas2(canvas2,ctx2);">
 				     	<img src="img/clear.png" width="25%" height="25%" id="dagger" />
 				     </button>
-				     
-<!--
-				     <button type="button" value="Save" size="23" onclick="save()">
-				     	<img src="img/save.png" width="25%" height="25%" id="dagger" />
-				     </button>
--->
+
 
 
 			    </div>
