--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -20,8 +20,10 @@ minimum-scale=1, width=device-width, height=device-height"/>
 <script src="js/jquery.mobile-1.4.5.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/touch-punch.js"></script>
+<!--
 <script src="js/hammer.js"></script>
 <script src="js/jquery.hammer.js"></script>
+-->
 <script src="js/jquery.minicolors.js"></script>
     
 
@@ -40,8 +42,9 @@ minimum-scale=1, width=device-width, height=device-height"/>
 <script type="text/javascript" charset="utf-8" src="SavePhotoPlugin.js"></script>
 <script type= "text/javascript" src= "cordova.js"></script>
 <script type= "text/javascript" src= "js/index.js"></script>
-<script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
+<!-- <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script> -->
 <script type="text/javascript">
+/*
 	var socket = io.connect('http://104.131.93.171:8080/');
 
 			socket.on('connect', function() {
@@ -62,6 +65,7 @@ minimum-scale=1, width=device-width, height=device-height"/>
 												
 			});
 			
+*/
 
 			
 </script>
